--- a/src/frontend-crud/crud.ui.portal.jenn/Views/Empresa/Create.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/Empresa/Create.cshtml
@@ -28,7 +28,7 @@
                                     Filial
                                 </label>
                             </span>
-                            <select disabled id="sel_matriz" asp-for="MatrizID"  asp-items="ViewBag.MatrizID" style="width:450px;" class="form-control"></select>
+                            <select disabled id="sel_matriz" asp-for="MatrizID" asp-items="ViewBag.MatrizID" style="width:450px;" class="form-control"></select>
                         </div>
                     </div>
                 </div>
@@ -40,28 +40,37 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label" for="Nome">Nome <h11>*</h11></label>
                     <div class="col-md-8">
-                        <input id="Nome" asp-for="Nome" name="Nome" placeholder="" class="form-control input-md"  type="text">
+                        <input id="Nome" asp-for="Nome" name="Nome" placeholder="" class="form-control input-md" type="text">
                         <span asp-validation-for="Nome" class="text-danger"></span>
                     </div>
                 </div>
+
+                <div class="form-group">
+                    <label class="col-md-2 control-label" for="Nome">Fantasia </label>
+                    <div class="col-md-8">
+                        <input id="Nome" asp-for="Fantasia" name="Fantasia" placeholder="" class="form-control input-md" type="text">
+                        <span asp-validation-for="Fantasia" class="text-danger"></span>
+                    </div>
+                </div>
+
 
                 <!-- Text input-->
                 <div class="form-group">
                     <label class="col-md-2 control-label" for="Nome">CNPJ <h11>*</h11></label>
                     <div class="col-md-3">
-                        <input asp-for="cnpj" id="cnpj" name="cnpj" placeholder="Apenas números" class="form-control input-md"  type="text" maxlength="20" pattern="[0-9]+$">
+                        <input asp-for="cnpj" id="cnpj" name="cnpj" placeholder="Apenas números" class="form-control input-md" type="text" maxlength="20" pattern="[0-9]+$">
                         <span asp-validation-for="cnpj" class="text-danger"></span>
                     </div>
 
                     <label class="col-md-2 control-label" for="Nome">Código Cnes <h11>*</h11></label>
                     <div class="col-md-3">
-                        <input asp-for="CodigoCnes" id="CodigoCnes" name="CodigoCnes" placeholder="Apenas números" class="form-control input-md"  type="text" maxlength="20" pattern="[0-9]+$">
+                        <input asp-for="CodigoCnes" id="CodigoCnes" name="CodigoCnes" placeholder="Apenas números" class="form-control input-md" type="text" maxlength="20" pattern="[0-9]+$">
                         <span asp-validation-for="CodigoCnes" class="text-danger"></span>
                     </div>
                 </div>
                 <!-- Select Basic -->
                 <div class="form-group">
-                   
+
                     <label class="col-md-2 control-label" for="Estado Civil">Conta Empresa<h11>*</h11></label>
                     <div class="col-md-2">
                         <select asp-for="TipoEmpresa" required id="Tipo Cliente" name="TipoEmpresa" class="form-control">
@@ -82,7 +91,7 @@
                     <div class="col-md-3">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
-                            <input id="prependedtext"  asp-for="Telefone1" name="Telefone1" class="form-control" placeholder="XX XXXXX-XXXX"  type="text" maxlength="13" pattern="\[0-9]{2}\ [0-9]{4,6}-[0-9]{3,4}$"
+                            <input id="prependedtext" asp-for="Telefone1" name="Telefone1" class="form-control" placeholder="XX XXXXX-XXXX" type="text" maxlength="13" pattern="\[0-9]{2}\ [0-9]{4,6}-[0-9]{3,4}$"
                                    OnKeyPress="formatar('## #####-####', this)">
                         </div>
                     </div>
@@ -102,7 +111,7 @@
                     <div class="col-md-3">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                            <input id="email" asp-for="Email" name="Email" class="form-control" placeholder="email@email.com"  type="email" />
+                            <input id="email" asp-for="Email" name="Email" class="form-control" placeholder="email@email.com" type="email" />
                         </div>
                     </div>
 
@@ -110,7 +119,7 @@
                     <div class="col-md-3">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                            <input id="prependedtext" asp-for="url_loja" name="url_loja" class="form-control" placeholder="Link da loja virtual"  type="url" />
+                            <input id="prependedtext" asp-for="url_loja" name="url_loja" class="form-control" placeholder="Link da loja virtual" type="url" />
                         </div>
                     </div>
 
@@ -121,14 +130,14 @@
                     <div class="col-md-3">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon  glyphicon-envelope"></i></span>
-                            <input  id="prependedtext" asp-for="ImgemFrontEmpresa" name="ImgemFrontEmpresa" class="form-control" placeholder="Link do Logotipo" type="url" />
+                            <input id="prependedtext" asp-for="ImgemFrontEmpresa" name="ImgemFrontEmpresa" class="form-control" placeholder="Link do Logotipo" type="url" />
                         </div>
                     </div>
                     <label class="col-md-2 control-label" for="prependedtext">Google Maps  </label>
                     <div class="col-md-3">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                            <input id="prependedtext" asp-for="maps" name="maps" class="form-control" placeholder="Link Endereço Google Maps Empresa"  type="url" />
+                            <input id="prependedtext" asp-for="maps" name="maps" class="form-control" placeholder="Link Endereço Google Maps Empresa" type="url" />
                         </div>
                     </div>
                 </div>
@@ -140,7 +149,7 @@
                     <div class="col-md-4">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                            <input id="prependedtext" asp-for="Responsavel" name="Responsavel" class="form-control" placeholder="Responsavel pela empresa"  type="text" />
+                            <input id="prependedtext" asp-for="Responsavel" name="Responsavel" class="form-control" placeholder="Responsavel pela empresa" type="text" />
                         </div>
                     </div>
                 </div>
@@ -153,7 +162,7 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label" for="CEP">CEP <h11>*</h11></label>
                     <div class="col-md-2">
-                        <input id="cep" name="cep" asp-for="cep" placeholder="Apenas números" class="form-control input-md"   type="text" maxlength="8" pattern="[0-9]+$">
+                        <input id="cep" name="cep" asp-for="cep" placeholder="Apenas números" class="form-control input-md" type="text" maxlength="8" pattern="[0-9]+$">
                     </div>
                     <div class="col-md-2">
                         <button type="button" class="btn btn-primary" id="pesquisa">Pesquisar</button>
@@ -162,20 +171,20 @@
 
 
 
-                
+
                 <div class="form-group">
                     <label class="col-md-2 control-label" for="prependedtext">Endereço</label>
                     <div class="col-md-4">
                         <div class="input-group">
                             <span class="input-group-addon">Rua</span>
-                            <input id="rua" name="Logradouro" asp-for="Logradouro" class="form-control" placeholder=""  type="text">
+                            <input id="rua" name="Logradouro" asp-for="Logradouro" class="form-control" placeholder="" type="text">
                         </div>
 
                     </div>
                     <div class="col-md-2">
                         <div class="input-group">
                             <span class="input-group-addon">Nº <h11>*</h11></span>
-                            <input id="numero" name="numero" asp-for="numero" class="form-control" placeholder=""  type="text">
+                            <input id="numero" name="numero" asp-for="numero" class="form-control" placeholder="" type="text">
                         </div>
 
                     </div>
@@ -183,7 +192,7 @@
                     <div class="col-md-3">
                         <div class="input-group">
                             <span class="input-group-addon">Bairro</span>
-                            <input id="bairro" asp-for="bairro" name="bairro" class="form-control" placeholder=""  type="text">
+                            <input id="bairro" asp-for="bairro" name="bairro" class="form-control" placeholder="" type="text">
                         </div>
 
                     </div>
@@ -194,12 +203,12 @@
                     <div class="col-md-6">
                         <div class="input-group">
                             <span class="input-group-addon">UF / Cidade</span>
-                            <select   id="sel_cidade" asp-for="num_cidade" asp-items="ViewBag.Cidades" required class="form-control"></select>
+                            <select id="sel_cidade" asp-for="num_cidade" asp-items="ViewBag.Cidades" required class="form-control"></select>
                         </div>
 
                     </div>
 
-                    
+
                 </div>
 
 
