--- a/src/frontend-crud/crud.ui.portal.jenn/Views/Empresa/Edit.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/Empresa/Edit.cshtml
@@ -9,6 +9,7 @@
 
 <form asp-controller="Empresa" asp-action="Edit" asp-antiforgery="true" method="post" class="form-horizontal">
     <input type="hidden" asp-for="Ativo" />
+    <input type="hidden" asp-for="MatrizID" />
     <input type="hidden" asp-for="EmpresaID" />
     <fieldset>
         <div class="panel panel-primary">
@@ -63,8 +64,16 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label" for="Nome">Nome <h11>*</h11></label>
                     <div class="col-md-8">
-                        <input id="Nome" asp-for="Nome" name="Nome" placeholder="" class="form-control input-md"  type="text">
+                        <input id="Nome" asp-for="Nome" name="Nome" placeholder="" class="form-control input-md" type="text">
                         <span asp-validation-for="Nome" class="text-danger"></span>
+                    </div>
+                </div>
+                <!-- Text input-->
+                <div class="form-group">
+                    <label class="col-md-2 control-label" for="Nome">Fantasia </label>
+                    <div class="col-md-8">
+                        <input id="Nome" asp-for="Fantasia" name="Fantasia" placeholder="" class="form-control input-md" type="text">
+                        <span asp-validation-for="Fantasia" class="text-danger"></span>
                     </div>
                 </div>
 
@@ -72,13 +81,13 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label" for="Nome">CNPJ <h11>*</h11></label>
                     <div class="col-md-2">
-                        <input asp-for="cnpj" id="cnpj" name="cnpj" placeholder="Apenas números" class="form-control input-md"  type="text" maxlength="14" onkeypress="return somenteNumeros(event);" pattern="^(\d{2}\.?\d{3}\.?\d{3}\/?\d{4}-?\d{2}|\d{3}\.?\d{3}\.?\d{3}-?\d{2})$">
+                        <input asp-for="cnpj" id="cnpj" name="cnpj" placeholder="Apenas números" class="form-control input-md" type="text" maxlength="14" onkeypress="return somenteNumeros(event);" pattern="^(\d{2}\.?\d{3}\.?\d{3}\/?\d{4}-?\d{2}|\d{3}\.?\d{3}\.?\d{3}-?\d{2})$">
                         <span asp-validation-for="cnpj" class="text-danger"></span>
                     </div>
 
                     <label class="col-md-2 control-label" for="Nome">Código Cnes <h11>*</h11></label>
                     <div class="col-md-2">
-                        <input asp-for="CodigoCnes" id="CodigoCnes" name="CodigoCnes" placeholder="Apenas números" class="form-control input-md"  type="text" maxlength="7" onkeypress="return somenteNumeros(event);" pattern="[0-9]+$">
+                        <input asp-for="CodigoCnes" id="CodigoCnes" name="CodigoCnes" placeholder="Apenas números" class="form-control input-md" type="text" maxlength="7" onkeypress="return somenteNumeros(event);" pattern="[0-9]+$">
                         <span asp-validation-for="CodigoCnes" class="text-danger"></span>
                     </div>
                 </div>
@@ -105,7 +114,7 @@
                     <div class="col-md-3">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
-                            <input id="prependedtext" asp-for="Telefone1" name="Telefone1" class="form-control" placeholder="XX XXXXX-XXXX"  type="text" maxlength="13" pattern="\[0-9]{2}\ [0-9]{4,6}-[0-9]{3,4}$"
+                            <input id="prependedtext" asp-for="Telefone1" name="Telefone1" class="form-control" placeholder="XX XXXXX-XXXX" type="text" maxlength="13" pattern="\[0-9]{2}\ [0-9]{4,6}-[0-9]{3,4}$"
                                    OnKeyPress="formatar('## #####-####', this)">
                         </div>
                     </div>
@@ -133,7 +142,7 @@
                     <div class="col-md-3">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                            <input id="prependedtext" asp-for="url_loja" name="url_loja" class="form-control" placeholder="Link da loja virtual" type="url" />
+                            <input id="prependedtext" asp-for="url_loja" name="url_loja" class="form-control" placeholder="Link da loja virtual" />
                         </div>
                     </div>
 
@@ -144,14 +153,14 @@
                     <div class="col-md-3">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon  glyphicon-envelope"></i></span>
-                            <input id="prependedtext" asp-for="ImgemFrontEmpresa" name="ImgemFrontEmpresa" class="form-control" placeholder="Link do Logotipo" type="url" />
+                            <input id="prependedtext" asp-for="ImgemFrontEmpresa" name="ImgemFrontEmpresa" class="form-control" placeholder="Link do Logotipo" />
                         </div>
                     </div>
                     <label class="col-md-2 control-label" for="prependedtext">Google Maps  </label>
                     <div class="col-md-3">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                            <input id="prependedtext" asp-for="maps" name="maps" class="form-control" placeholder="Link Endereço Google Maps Empresa" type="url" />
+                            <input id="prependedtext" asp-for="maps" name="maps" class="form-control" placeholder="Link Endereço Google Maps Empresa" />
                         </div>
                     </div>
                 </div>
@@ -163,7 +172,7 @@
                     <div class="col-md-4">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                            <input id="prependedtext" asp-for="Responsavel" name="Responsavel" class="form-control" placeholder="Responsavel pela empresa"  type="text" />
+                            <input id="prependedtext" asp-for="Responsavel" name="Responsavel" class="form-control" placeholder="Responsavel pela empresa" type="text" />
                         </div>
                     </div>
                 </div>
@@ -176,7 +185,7 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label" for="CEP">CEP <h11>*</h11></label>
                     <div class="col-md-2">
-                        <input id="cep" name="cep" asp-for="cep" placeholder="Apenas números" class="form-control input-md"  type="text" maxlength="8" pattern="[0-9]+$">
+                        <input id="cep" name="cep" asp-for="cep" placeholder="Apenas números" class="form-control input-md" type="text" maxlength="8" pattern="[0-9]+$">
                     </div>
                     <div class="col-md-2">
                         <button type="button" class="btn btn-primary" id="pesquisa">Pesquisar</button>
@@ -191,14 +200,14 @@
                     <div class="col-md-4">
                         <div class="input-group">
                             <span class="input-group-addon">Rua</span>
-                            <input id="rua" name="Logradouro" asp-for="Logradouro" class="form-control" placeholder=""  type="text">
+                            <input id="rua" name="Logradouro" asp-for="Logradouro" class="form-control" placeholder="" type="text">
                         </div>
 
                     </div>
                     <div class="col-md-2">
                         <div class="input-group">
                             <span class="input-group-addon">Nº <h11>*</h11></span>
-                            <input id="numero" name="numero" asp-for="numero" class="form-control" placeholder=""  type="text">
+                            <input id="numero" name="numero" asp-for="numero" class="form-control" placeholder="" type="text">
                         </div>
 
                     </div>
@@ -206,7 +215,7 @@
                     <div class="col-md-3">
                         <div class="input-group">
                             <span class="input-group-addon">Bairro</span>
-                            <input id="bairro" asp-for="bairro" name="bairro" class="form-control" placeholder=""  type="text">
+                            <input id="bairro" asp-for="bairro" name="bairro" class="form-control" placeholder="" type="text">
                         </div>
 
                     </div>
