--- a/src/frontend-crud/crud.ui.portal.jenn/Views/ProcedimentoEmpresa/Edit.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/ProcedimentoEmpresa/Edit.cshtml
@@ -114,6 +114,7 @@
                     <div class="col-md-2">
                         <select asp-for="Destaque" required id="Destaque" name="Destaque" class="form-control">
                             <option value="">Selecione</option>
+                            <option value="0">Sem Destaque</option>
                             <option value="1">Pagina Pesquisa</option>
                         </select>
                     </div>
