--- a/src/frontend/ui.portal.jenn/Views/Shared/Components/ListaDestaqueTelaInicial/Default.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/Components/ListaDestaqueTelaInicial/Default.cshtml
@@ -11,8 +11,8 @@
 
                     <img src="@item.imagemMain" alt="@item.procedimentoEmpresaID">
                     <p> @item.nome_pers</p>
-                    <p class="preco">A partir de <span>@item.preco_contra.ToString("C")</span></p>
-                    <a href="@item.procedimentoEmpresaID" title="Ver mais Preços" class="btn btn-primary">Ver mais Preços</a>
+                    <p class="preco">A partir de <span>@item.precoProduto.ToString("C")</span></p>
+                    <a href="/Produtos/Lista?Produto=@item.nome_pers&IdProcedimento=@item.procedimento.procedimentoID" title="Ver mais Preços" class="btn btn-primary">Ver mais Preços</a>
                 </div>
 
             </div>
@@ -21,4 +21,3 @@
     </div>
 }
 
- 
