--- a/src/frontend/ui.portal.jenn/Views/Shared/Autenticar.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/Autenticar.cshtml
@@ -75,24 +75,24 @@
 
                     <button type="submit" class="btn btn-primary">Entrar</button>
                 </form>
-                <h2>@ViewData["Message"]</h2>
-                <p class="txt-p"><a href="" title="">Esqueçeu a senha? </a></p>
-                <div class="line"></div>
-                <span class="or">ou</span>
-                <div class="login-social">
-                    <div class="content-login-social c-f">
-                        <a href="" title="">
-                            <img src="/img/contato/icon-facebook.png" />    
-                            <span>Fazer login com o Facebook</span>
-                        </a>
-                    </div>
-                    <div class="content-login-social c-g">
-                        <a href="" title="">
-                            <img src="/img/contato/icon-gmail.png" />
-                            <span>Fazer login com o Google</span>
-                        </a>
-                    </div>
-                </div>
+                <!--<h2>@ViewData["Message"]</h2>
+    <p class="txt-p"><a href="" title="">Esqueçeu a senha? </a></p>
+    <div class="line"></div>
+    <span class="or">ou</span>
+    <div class="login-social">
+        <div class="content-login-social c-f">
+            <a href="" title="">
+                <img src="/img/contato/icon-facebook.png" />
+                <span>Fazer login com o Facebook</span>
+            </a>
+        </div>
+        <div class="content-login-social c-g">
+            <a href="" title="">
+                <img src="/img/contato/icon-gmail.png" />
+                <span>Fazer login com o Google</span>
+            </a>
+        </div>
+    </div>-->
                 <p class="txt-p">Ainda não tem conta? <a href="@Url.Action("Cadastrar", "Home")" title="">Faça seu cadastro</a></p>
 
             </div>
