--- a/src/frontend/ui.portal.jenn/Views/Shared/Components/FooterParte2/Default.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/Components/FooterParte2/Default.cshtml
@@ -1,27 +1,29 @@
 ﻿<div class="row">
     <div class="col-xl-3 col-lg-3 col-md-6">
-        <h5>Serviço</h5>
-        <a href="@Url.Action("SegurancaInformacao", "Home")" title="Segurança da informação">Segurança da informação</a>
-        <a href="@Url.Action("QuemSomos", "Home")" title="Quem somos">Quem somos</a>
-        <a href="@Url.Action("Contato", "Home")" title="Contato">Contato</a>
+        <!-- <h5>Serviço</h5>
+    <a href="@Url.Action("SegurancaInformacao", "Home")" title="Segurança da informação">Segurança da informação</a>
+    <a href="@Url.Action("QuemSomos", "Home")" title="Quem somos">Quem somos</a>
+    <a href="@Url.Action("Contato", "Home")" title="Contato">Contato</a>-->
     </div>
     <div class="col-xl-3 col-lg-3 col-md-6">
-        <h5>Pacientes</h5>
-        <a href="@Url.Action("CentralAjuda", "Home")" title="Perguntas frequentes">Perguntas frequentes</a>
-        <a href="@Url.Action("TermosCondicoes", "Home")" title="Termos e condições">Termos e condições</a>
+        <!-- <h5>Pacientes</h5>
+     <a href="@Url.Action("CentralAjuda", "Home")" title="Perguntas frequentes">Perguntas frequentes</a>
+     <a href="@Url.Action("TermosCondicoes", "Home")" title="Termos e condições">Termos e condições</a>-->
     </div>
-    <div class="col-xl-3 col-lg-3 col-md-6">
-        <h5>Instituições de saúde</h5>
-        <a href="@Url.Action("Contato", "Home")" title="Entre em contato">Entre em contato</a>
-        <a href="@Url.Action("TermosCondicoes", "Home")" title="Termos e condições">Termos e condições</a>
+       
+        <div class="col-xl-3 col-lg-3 col-md-6">
+            <h5>Instituições de saúde</h5>
+            <a href="http://www-jenn-com-br.rds.land/contato" title="Entre em contato">Entre em contato</a>
+            <!--  <a href="@Url.Action("Contato", "Home")" title="Entre em contato">Entre em contato</a>
+        <a href="@Url.Action("TermosCondicoes", "Home")" title="Termos e condições">Termos e condições</a> -->
+        </div>
+        <div class="col-xl-3 col-lg-3 col-md-6">
+            <img class="logo-footer" src="/img/logo-reduz-jenn.png" alt="" />
+            <p>Ghan consultoria e sistemas Ltda. São Caetano do Sul - SP</p>
+            <ul class="social">
+                @*<li><a href="" title=""><img src="/img/social/icone-facebook.png" alt="" /></a></li>*@
+                <li><a href="https://www.instagram.com/jenn_saude/" target="_blank" title=""><img src="/img/social/icone-instagram.png" alt="" /></a></li>
+                <li><a href="https://www.linkedin.com/company/jenn" target="_blank" title=""><img src="/img/social/icone-linkedin.png" alt="" /></a></li>
+            </ul>
+        </div>
     </div>
-    <div class="col-xl-3 col-lg-3 col-md-6">
-        <img class="logo-footer" src="/img/logo-reduz-jenn.png" alt="" />
-        <p>Ghan consultoria e sistemas Ltda. São Caetano do Sul - SP</p>
-        <ul class="social">
-            @*<li><a href="" title=""><img src="/img/social/icone-facebook.png" alt="" /></a></li>*@
-            <li><a href="https://www.instagram.com/jenn_saude/" target="_blank" title=""><img src="/img/social/icone-instagram.png" alt="" /></a></li>
-            <li><a href="https://www.linkedin.com/company/jenn" target="_blank" title=""><img src="/img/social/icone-linkedin.png" alt="" /></a></li>
-        </ul>
-    </div>
-</div>
