cidade no endereço

--- a/src/frontend/ui.portal.jenn/Views/Shared/Components/ProcedimentoLista/Default.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/Components/ProcedimentoLista/Default.cshtml
@@ -32,10 +32,11 @@
                 <div class="content-info">
                     <h4>@Model.NomeUnidade</h4>
                     <p>@Model.EnderecoCompleto <a href="@Model.UrlMaps" target="_blank">Mapa</a></p>
+                    <p>@Model.Cidade</p>
                 </div>
             </div>
             <div class="btn-content">
-                <a href="@Model.EnderecoLoja" class="btn btn-primary" title="">PARTICULAR</a>
+                <!--<a href="@Model.EnderecoLoja" class="btn btn-primary" title="">PARTICULAR</a>-->
                 <a href="" class="btn btn-primary btn-convenio" title="">CONVÊNIOS</a>
                 <h4 style="display: inline-block; padding: 2%;" class="h3convenio"></h4>
                 <div class="box-convenios">
